--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@webblocksapp/ng-bootstrap-components": [
         "projects/ng-bootstrap-components/src/public-api.ts"
